--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=2.0">
   <link rel="stylesheet" href="assets/css/default.css">
   <title>Traakr</title>
 </head>
@@ -144,8 +144,8 @@
   <h4>FOLLOW US</h4>
 
   <div style="margin-left: 3px;">
-    <a href="https://www.facebook.com/cairba.riet"><img src="assets/images/Facebook_logo.webp" alt="Facebook" class="social-media-logo"></a>
-    <a href="https://www.instagram.com/caribatwist/"><img src="assets/images/instagram-logo.webp" alt="Instagram" class="social-media-logo"></a>
+    <a href="https://www.facebook.com/cairba.riet" target="_blank"><img src="assets/images/Facebook_logo.webp" alt="Facebook" class="social-media-logo"></a>
+    <a href="https://www.instagram.com/caribatwist/" target="_blank"><img src="assets/images/instagram-logo.webp" alt="Instagram" class="social-media-logo"></a>
   </div>
 
   <div class="our-info-div">
