more pictures loaded

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=2.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/default.css">
   <title>Traakr</title>
 </head>
@@ -19,7 +19,7 @@
         <li><a href="file:///C:/Users/monge/OneDrive/Desktop/Traakr/index.html"><div class="nav-bar-div_text-decoration">Home</div></a></li>
         <li><a href="#about-us"><div class="nav-bar-div_text-decoration">About us</div></a></li>
         <li><a href="#contact-us"><div class="nav-bar-div_text-decoration">Contact us</div></a></li>
-        <li><a href=""><div class="nav-bar-div_text-decoration">Samples</div></a></li>
+        <li><a href="#samples"><div class="nav-bar-div_text-decoration">Samples</div></a></li>
       </ul>
     </div>
   </header>
@@ -47,7 +47,7 @@
 
 <section>
 
-<form action="" method="get" class="contents-form">
+<div class="contents-form">
   <div class="product-images-div">
     <img src="assets/images/android1.jpg" alt="Android1" class="product-image">
     <img src="assets/images/android3.jpg" alt="Android2" class="product-image">
@@ -60,7 +60,11 @@
   </div>
 
   <center><a href="#contact-us">Contact us to order this</a></center>
-</form>
+  <center><a href="whatsapp://send?text=Hello I would like to chat with you from your website&phone=+27638103794" title="Click to send WhatsApp message"><button>Send WhatsApp</button> </a></center>
+  <center><a href="mailto: cassiousriet@gmail.com" title="Click to open an E-mail"><button>Send an E-mail</button></a></center>
+  <center>OR</center>
+  <center><a href="tel: +2763 810 3794" title="Click to call"><button>Phone call</button></a></center>
+</div>
 
 </section>
 
@@ -68,7 +72,7 @@
 
 <section>
 
-<form action="" method="get" class="contents-form">
+<div class="contents-form">
   <div class="product-images-div">
     <img src="assets/images/iphone1.jpg" alt="IPhone1" class="product-image">
     <img src="assets/images/iphone3.jpg" alt="IPhone2" class="product-image">
@@ -81,7 +85,11 @@
   </div>
 
   <center><a href="#contact-us">Contact us to order this</a></center>
-</form>
+  <center><a href="whatsapp://send?text=Hello I would like to chat with you from your website&phone=+27638103794" title="Click to send WhatsApp message"><button>Send WhatsApp</button> </a></center>
+  <center><a href="mailto: cassiousriet@gmail.com" title="Click to open an E-mail"><button>Send an E-mail</button></a></center>
+  <center>OR</center>
+  <center><a href="tel: +2763 810 3794" title="Click to call"><button>Phone call</button></a></center>
+</div>
 
 </section>
 
@@ -90,7 +98,7 @@
 <section>
 
 <div class="contents-div">
-<form action="" method="get">
+<div class="contents-form">
   <div class="product-images-div">
     <img src="assets/images/" alt="ProductPic" class="product-image">
   </div>
@@ -100,9 +108,13 @@
   </div>
 
   <center><a href="#contact-us">Contact us to order this</a></center>
-</form>
+  <center><a href="whatsapp://send?text=Hello I would like to chat with you from your website&phone=+27638103794" title="Click to send WhatsApp message"><button>Send WhatsApp</button> </a></center>
+  <center><a href="mailto: cassiousriet@gmail.com" title="Click to open an E-mail"><button>Send an E-mail</button></a></center>
+  <center>OR</center>
+  <center><a href="tel: +2763 810 3794" title="Click to call"><button>Phone call</button></a></center>
+</div>
 
-<form action="" method="get">
+<div class="contents-form">
   <div class="product-images-div">
     <img src="assets/images/" alt="ProductPic" class="product-image">
   </div>
@@ -112,7 +124,11 @@
   </div>
 
   <center><a href="#contact-us">Contact us to order this</a></center>
-</form>
+  <center><a href="whatsapp://send?text=Hello I would like to chat with you from your website&phone=+27638103794" title="Click to send WhatsApp message"><button>Send WhatsApp</button> </a></center>
+  <center><a href="mailto: cassiousriet@gmail.com" title="Click to open an E-mail"><button>Send an E-mail</button></a></center>
+  <center>OR</center>
+  <center><a href="tel: +2763 810 3794" title="Click to call"><button>Phone call</button></a></center>
+</div>
 
 <center><p>More products...</p></center>
 </div>
@@ -120,7 +136,8 @@
 </section>
 
 <div class="summery-div">
-<div class="summery-picture-div"></div>
+<div class="summery-picture-div">
+</div>
 <div class="about-div">
   <center><h2 class="about-us-heading" id="about-us">About us</h2></center>
   <center>
@@ -136,17 +153,21 @@
 </div>
 </div>
 
-<section></section>
+<section>
+  <center><h1 class="heading1" id="samples">SAMPLES</h1></center>
+  <div class="samples">
+    <img src="assets/images/android6.jpg" alt="sample1" class="sample-image">
+    <img src="assets/images/IMG-20220322-WA0020.jpg" alt="sample2" class="sample-image">
+    <img src="assets/images/IMG-20221212-WA0012.jpg" alt="sample3" class="sample-image">
+    <img src="assets/images/IMG-20220322-WA0033.jpg" alt="sample4" class="sample-image">
+    <img src="assets/images/IMG-20221212-WA0009.jpg" alt="sample5" class="sample-image">
+    <img src="assets/images/IMG-20221212-WA0010.jpg" alt="sample6" class="sample-image">
+  </div>
+</section>
 
 <footer>
 
   <br> <br> <br>
-  <h4>FOLLOW US</h4>
-
-  <div style="margin-left: 3px;">
-    <a href="https://www.facebook.com/cairba.riet" target="_blank"><img src="assets/images/Facebook_logo.webp" alt="Facebook" class="social-media-logo"></a>
-    <a href="https://www.instagram.com/caribatwist/" target="_blank"><img src="assets/images/instagram-logo.webp" alt="Instagram" class="social-media-logo"></a>
-  </div>
 
   <div class="our-info-div">
 
@@ -176,6 +197,13 @@
       </div>
     </div>
 
+  </div>
+
+  <h4>FOLLOW US</h4>
+
+  <div style="margin-left: 3px;">
+    <a href="https://www.facebook.com/cairba.riet" target="_blank"><img src="assets/images/Facebook_logo.webp" alt="Facebook" class="social-media-logo"></a>
+    <a href="https://www.instagram.com/caribatwist/" target="_blank"><img src="assets/images/instagram-logo.webp" alt="Instagram" class="social-media-logo"></a>
   </div>
 
 </footer>
