added some order design and order instructions

--- a/index.html
+++ b/index.html
@@ -43,52 +43,102 @@
 
 </section>
 
-<center><h1 class="heading1">ANDROID PHONE COVERS</h1></center>
+<center><h1 class="heading1" id="androidCover">ANDROID PHONE COVERS</h1></center>
 
 <section>
 
-<div class="contents-form">
-  <div class="product-images-div">
+<div class="products-form">
+  <div class="contents-form">
+    <div class="product-images-div">
     <img src="assets/images/android1.jpg" alt="Android1" class="product-image">
     <img src="assets/images/android3.jpg" alt="Android2" class="product-image">
     <img src="assets/images/android9.jpg" alt="Android3" class="product-image">
     <img src="assets/images/android8.jpg" alt="Android4" class="product-image">
-  </div>
-  <div class="product-info">
-    <h4 class="product-name">Customised andoid phone covers</h4>
-    <p class="product-price">R180.00</p>
+    </div>
+    <div class="product-info">
+      <h4 class="product-name">Customised andoid phone covers</h4>
+      <p class="product-price">R180.00</p>
+    </div>
+
+    <center><a href="#contact-us">Contact us to order this</a></center>
+    
   </div>
 
-  <center><a href="#contact-us">Contact us to order this</a></center>
-  <center><a href="whatsapp://send?text=Hello I would like to chat with you from your website&phone=+27638103794" title="Click to send WhatsApp message"><button>Send WhatsApp</button> </a></center>
-  <center><a href="mailto: cassiousriet@gmail.com" title="Click to open an E-mail"><button>Send an E-mail</button></a></center>
-  <center>OR</center>
-  <center><a href="tel: +2763 810 3794" title="Click to call"><button>Phone call</button></a></center>
+  <!--These information will be on a side-->
+  <div class="contents-info-div">
+    <h2>R200</h2>
+    <p style="margin-bottom: 12px;">R80 deposit</p>
+    <a href="#orderInstruction" style="margin-bottom: 12px;">How to place an order?</a> <br> <hr>
+     <br>
+
+    <!--Buttons to order, these butons take you straight to seller's contacts-->
+    <center>
+    <h3>To order this item:</h3> <br>
+    <div class="order-buttons">
+      <a href="whatsapp://send?text=Hello I would like to chat with you from your website&phone=+27638103794" title="Click to send WhatsApp message"><button>Send WhatsApp</button> </a>
+      <a href="mailto: cassiousriet@gmail.com" title="Click to open an E-mail"><button>Send an E-mail</button></a>
+      <p>OR</p>
+      <a href="tel: +2763 810 3794" title="Click to call"><button>Phone call</button></a>
+    </div>
+    </center>
+    <br><br><br><br>
+    <p>NB! You not required to send any phone cover to us to customize, we offer everything</p> <br>
+    <ul>
+      <h4>What's inside the box</h4>
+      <li>1 x Customized Android phone cover</li>
+    </ul>
+  </div>
 </div>
 
 </section>
 
-<center><h1 class="heading1">IPHONE COVERS</h1></center>
+<center><h1 class="heading1" id="IphoneCover">IPHONE COVERS</h1></center>
 
 <section>
 
-<div class="contents-form">
-  <div class="product-images-div">
-    <img src="assets/images/iphone1.jpg" alt="IPhone1" class="product-image">
-    <img src="assets/images/iphone3.jpg" alt="IPhone2" class="product-image">
-    <img src="assets/images/iphone2.jpg" alt="IPhone3" class="product-image">
-    <img src="assets/images/iphone4.jpg" alt="IPhone4" class="product-image">
-  </div>
-  <div class="product-info">
-    <h4 class="product-name">Customised IPhone covers</h4>
-    <p class="product-price">R200.00</p>
+<div class="products-form">
+
+  <!--This div display pictures of the product, product description, price and some buttons to seller's contacts-->
+  <div class="contents-form">
+    <div class="product-images-div">
+      <img src="assets/images/iphone1.jpg" alt="IPhone1" class="product-image">
+      <img src="assets/images/iphone3.jpg" alt="IPhone2" class="product-image">
+      <img src="assets/images/iphone2.jpg" alt="IPhone3" class="product-image">
+      <img src="assets/images/iphone4.jpg" alt="IPhone4" class="product-image">
+    </div>
+    <div class="product-info">
+      <h4 class="product-name">Customised IPhone covers</h4>
+      <p class="product-price">R220.00</p>
+    </div>
+
+    <center><a href="#contact-us">Contact us to order this</a></center>
   </div>
 
-  <center><a href="#contact-us">Contact us to order this</a></center>
-  <center><a href="whatsapp://send?text=Hello I would like to chat with you from your website&phone=+27638103794" title="Click to send WhatsApp message"><button>Send WhatsApp</button> </a></center>
-  <center><a href="mailto: cassiousriet@gmail.com" title="Click to open an E-mail"><button>Send an E-mail</button></a></center>
-  <center>OR</center>
-  <center><a href="tel: +2763 810 3794" title="Click to call"><button>Phone call</button></a></center>
+  <!--These information will be on a side, it's should be more info about the product-->
+  <div class="contents-info-div">
+    <h2>R220</h2>
+    <p style="margin-bottom: 12px;">R80 deposit</p>
+    <a href="#orderInstruction" style="margin-bottom: 12px;">How to place an order?</a> <br> <hr>
+     <br>
+
+    <!--Buttons to order, these butons take you straight to seller's contacts-->
+    <center>
+    <h3>To order this item:</h3> <br>
+    <div class="order-buttons">
+      <a href="whatsapp://send?text=Hello I would like to chat with you from your website&phone=+27638103794" title="Click to send WhatsApp message"><button>Send WhatsApp</button> </a>
+      <a href="mailto: cassiousriet@gmail.com" title="Click to open an E-mail"><button>Send an E-mail</button></a>
+      <p>OR</p>
+      <a href="tel: +2763 810 3794" title="Click to call"><button>Phone call</button></a>
+    </div>
+    </center>
+    <br><br><br><br>
+    <p>NB! You not required to send any phone cover to us to customize, we offer everything</p> <br>
+    <ul>
+      <h4>What's inside the box</h4>
+      <li>1 x Customized Apple phone cover</li>
+    </ul>
+  </div>
+
 </div>
 
 </section>
@@ -161,8 +211,39 @@
     <img src="assets/images/IMG-20221212-WA0012.jpg" alt="sample3" class="sample-image">
     <img src="assets/images/IMG-20220322-WA0033.jpg" alt="sample4" class="sample-image">
     <img src="assets/images/IMG-20221212-WA0009.jpg" alt="sample5" class="sample-image">
-    <img src="assets/images/IMG-20221212-WA0010.jpg" alt="sample6" class="sample-image">
+    <img src="assets/images/picture3.jpg" alt="sample6" class="sample-image">
   </div>
+</section>
+
+<section class="order-instruction-section" id="orderInstruction">
+  <ul class="ordering-instructions">
+    <h4>How to place an order:</h4>
+    <li>You can contact us either by WhatsApp, E-mail or call us</li>
+    <li>WhatsApp, E-mail and Phone us <b>buttons</b> will take you straight to a respective platform</li>
+    <li>You can click the<q><i>Contact us to order this</i></q> <b>Text</b> to view all our contact details</li>
+    <ul class="platform-order">
+      <h5>WhatsApp order:</h5>
+      <li><q><i>WhatsApp</i></q><b> button</b> will take you straight to our WhatsApp chat</li>
+      <li>You can start a chat by sending the default message that will be there or send your own message</li>
+      <li>You will be required to give the name of your phone and the picture you want to display on your cover</li>
+    </ul>
+    <ul>
+      <h5>Email order:</h5>
+      <li><q><i>Send an E-mail</i></q><b> button</b> will take you straight to your e-mail with our e-mail address ready</li>
+      <li>Write us an e-mail and include the name of your phone, your name, your address and your phone number on an e-mail</li>
+      <li>Then attach the picture you want to display on your phone cover</li>
+    </ul>
+    <li>R deposit will be required before we process your order</li>
+    <li>Once you have sent us a deposit, we will proceed with processing your order</li>
+    <li>This will take  working days</li>
+    <li>We will contact you when your order is ready for collection</li>
+    <li>You will be required to pay full amount to get your order</li>
+  </ul>
+  <p>NB! You not required to send any phone cover to us to customize, we offer everything</p>
+  <ul>
+    <h4>What's inside the box</h4>
+    <li>1 x Customized Android phone cover</li>
+  </ul>
 </section>
 
 <footer>
@@ -198,6 +279,12 @@
     </div>
 
   </div>
+
+  <ul style="margin-bottom: 19px;">
+    <h4>Shop</h4> <br>
+    <li><a href="#androidCover">Android phone covers</a></li>
+    <li><a href="#IphoneCover">Apple phone covers</a></li>
+  </ul>
 
   <h4>FOLLOW US</h4>
 
