Help page added and ready

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
   
-<section>
   <header>
     <div class="logo">
       <h3><a href="http://localhost/Traakr/index.php" class="logo-text">Traakr</a></h3>
@@ -23,6 +22,8 @@
       </ul>
     </div>
   </header>
+
+<section>
 
 <div class="intro-div">
 
@@ -65,7 +66,7 @@
   <div class="contents-info-div">
     <h2>R200</h2>
     <p style="margin-bottom: 12px;">R80 deposit</p>
-    <a href="#orderInstruction" style="margin-bottom: 12px;">How to place an order?</a> <br> <hr>
+    <a href="/help.html" style="margin-bottom: 12px;">How to place an order?</a> <br> <hr>
      <br>
 
     <!--Buttons to order, these butons take you straight to seller's contacts-->
@@ -112,7 +113,7 @@
   <div class="contents-info-div">
     <h2>R220</h2>
     <p style="margin-bottom: 12px;">R80 deposit</p>
-    <a href="#orderInstruction" style="margin-bottom: 12px;">How to place an order?</a> <br> <hr>
+    <a href="/help.html#orderInstruction" style="margin-bottom: 12px;">How to place an order?</a> <br> <hr>
      <br>
 
     <!--Buttons to order, these butons take you straight to seller's contacts-->
@@ -142,39 +143,39 @@
 <section>
 
 <div class="contents-div">
-<div class="contents-form">
-  <div class="product-images-div">
-    <img src="assets/images/" alt="ProductPic" class="product-image">
-  </div>
-  <div class="product-info">
-    <h4 class="product-name">Product description</h4>
-    <p class="product-price">Price</p>
-  </div>
+  <div class="contents-form" id="plague1">
+    <div class="product-images-div">
+      <img src="assets/images/plague1.jpg" alt="ProductPic" class="product-image">
+    </div>
+    <div class="product-info">
+      <h4 class="product-name">Customised Plague (stand)</h4>
+      <p class="product-price">R350</p>
+    </div>
 
-  <center><a href="#contact-us">Contact us to order this</a></center>
-  <center><a href="whatsapp://send?text=Hello I would like to chat with you from your website&phone=+27638103794" title="Click to send WhatsApp message"><button>Send WhatsApp</button> </a></center>
-  <center><a href="mailto: cassiousriet@gmail.com" title="Click to open an E-mail"><button>Send an E-mail</button></a></center>
-  <center>OR</center>
-  <center><a href="tel: +2763 810 3794" title="Click to call"><button>Phone call</button></a></center>
-</div>
-
-<div class="contents-form">
-  <div class="product-images-div">
-    <img src="assets/images/" alt="ProductPic" class="product-image">
-  </div>
-  <div class="product-info">
-    <h4 class="product-name">Product description</h4>
-    <p class="product-price">Price</p>
+    <center><a href="#contact-us">Contact us to order this</a></center>
+    <center><a href="whatsapp://send?text=Hello I would like to chat with you from your website&phone=+27638103794" title="Click to send WhatsApp message"><button>Send WhatsApp</button> </a></center>
+    <center><a href="mailto: cassiousriet@gmail.com" title="Click to open an E-mail"><button>Send an E-mail</button></a></center>
+    <center>OR</center>
+    <center><a href="tel: +2763 810 3794" title="Click to call"><button>Phone call</button></a></center>
   </div>
 
-  <center><a href="#contact-us">Contact us to order this</a></center>
-  <center><a href="whatsapp://send?text=Hello I would like to chat with you from your website&phone=+27638103794" title="Click to send WhatsApp message"><button>Send WhatsApp</button> </a></center>
-  <center><a href="mailto: cassiousriet@gmail.com" title="Click to open an E-mail"><button>Send an E-mail</button></a></center>
-  <center>OR</center>
-  <center><a href="tel: +2763 810 3794" title="Click to call"><button>Phone call</button></a></center>
-</div>
+  <div class="contents-form" id="plague">
+    <div class="product-images-div">
+      <img src="assets/images/plague2.jpg" alt="ProductPic" class="product-image">
+    </div>
+    <div class="product-info">
+      <h4 class="product-name">Customised plague (stand)</h4>
+      <p class="product-price">R250</p>
+    </div>
 
-<center><p>More products...</p></center>
+    <center><a href="#contact-us">Contact us to order this</a></center>
+    <center><a href="whatsapp://send?text=Hello I would like to chat with you from your website&phone=+27638103794" title="Click to send WhatsApp message"><button>Send WhatsApp</button> </a></center>
+    <center><a href="mailto: cassiousriet@gmail.com" title="Click to open an E-mail"><button>Send an E-mail</button></a></center>
+    <center>OR</center>
+    <center><a href="tel: +2763 810 3794" title="Click to call"><button>Phone call</button></a></center>
+  </div>
+
+  <br>
 </div>
 
 </section>
@@ -209,52 +210,36 @@
   </div>
 </section>
 
-<section class="order-instruction-section" id="orderInstruction">
-  <ul class="ordering-instructions">
-    <h4>How to place an order:</h4>
-    <li>You can contact us either by WhatsApp, E-mail or call us</li>
-    <li>WhatsApp, E-mail and Phone us <b>buttons</b> will take you straight to a respective platform</li>
-    <li>You can click the<q><i>Contact us to order this</i></q> <b>Text</b> to view all our contact details</li>
-    <ul class="platform-order">
-      <h5>WhatsApp order:</h5>
-      <li><q><i>WhatsApp</i></q><b> button</b> will take you straight to our WhatsApp chat</li>
-      <li>You can start a chat by sending the default message that will be there or send your own message</li>
-      <li>You will be required to give the name of your phone and the picture you want to display on your cover</li>
-    </ul>
-    <ul>
-      <h5>Email order:</h5>
-      <li><q><i>Send an E-mail</i></q><b> button</b> will take you straight to your e-mail with our e-mail address ready</li>
-      <li>Write us an e-mail and include the name of your phone, your name, your address and your phone number on an e-mail</li>
-      <li>Then attach the picture you want to display on your phone cover</li>
-    </ul>
-    <li>R deposit will be required before we process your order</li>
-    <li>Once you have sent us a deposit, we will proceed with processing your order</li>
-    <li>This will take  working days</li>
-    <li>We will contact you when your order is ready for collection</li>
-    <li>You will be required to pay full amount to get your order</li>
-  </ul>
-  <p>NB! You not required to send any phone cover to us to customize, we offer everything</p>
-  <ul>
-    <h4>What's inside the box</h4>
-    <li>1 x Customized Android phone cover</li>
-  </ul>
-</section>
-
 <footer>
 
   <br> <br> <br>
 
-  <div class="our-info-div">
+    
 
-    <div class="footer-about-div">
-      <p class="footer-about-us-paragraph">
-        Hi. My name is Cassious Itumeleng Riet. I'm an entrepreneur. I make nice and cool
-        customized phone covers, bracelets and a more. I would really appreciate your support.
-        You can contact me on any platform listed around this website to place your order.
-      </p>
+  <br><br>
+
+  <div class="footer-navigator">
+
+    <div class="shop-navigator">
+      <ul style="margin-bottom: 19px;">
+        <h4>Shop</h4> <br>
+        <li><a href="#androidCover">Android phone covers</a></li>
+        <li><a href="#IphoneCover">Apple phone covers</a></li>
+        <li><a href="#plague">Plague</a></li>
+      </ul>
     </div>
+
+    <div class="help-navigator">
+      <ul>
+        <h4>Help</h4> <br>
+        <li><a href="/help.html">How to place orders</a></li>
+        <li>Enquiries: <a href="whatsapp://send?text=Hello I would like to chat with you from your website&phone=+27638103794">WhatsApp</a></li>
+        <li><a href="mailto: cassiousriet@gmail.com">E-mail feedback/suggestions</a></li>
+      </ul>
+    </div>
+
     <div class="footer-contact-details-div">
-      <center><h5 id="contact-us" style="text-decoration: underline;">Our contact details</h5></center>
+      <h4 id="contact-us" style="margin-left: 5%;">Our contact details</h4>
       <br>
       <div class="contact-details-div">
         <div>
@@ -274,19 +259,13 @@
 
   </div>
 
-  <ul style="margin-bottom: 19px;">
-    <h4>Shop</h4> <br>
-    <li><a href="#androidCover">Android phone covers</a></li>
-    <li><a href="#IphoneCover">Apple phone covers</a></li>
-  </ul>
-
   <h4>FOLLOW US</h4>
 
   <div style="margin-left: 3px;">
     <a href="https://www.facebook.com/cairba.riet" target="_blank"><img src="assets/images/Facebook_logo.webp" alt="Facebook" class="social-media-logo"></a>
     <a href="https://www.instagram.com/caribatwist/" target="_blank"><img src="assets/images/instagram-logo.webp" alt="Instagram" class="social-media-logo"></a>
   </div>
-
+  
 </footer>
 
 </body>
